--- a/TensorflowHub_Basics.ipynb
+++ b/TensorflowHub_Basics.ipynb
@@ -6,7 +6,7 @@
       "name": "TensorflowHub Basics",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMW4Ur+rvhGnHg3H6IWkHqr",
+      "authorship_tag": "ABX9TyM3tUYhbRgaBHQuGEiha011",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JP109/Tensorflow-Basics/blob/main/TensorflowHub_Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nVC6FtESmPSI"
+      },
+      "source": [
+        "# **Object Detection using models from TensorflowHub Part 2**\n",
+        "In this notebook, we will use a model from TfHub to classify objects and predict bounding boxes. The object probabilities, predicted class names and predicted bounding boxes will be **printed out**."
       ]
     },
     {
@@ -51,7 +61,7 @@
         "from six.moves.urllib.request import urlopen\n",
         "from six import BytesIO"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +85,7 @@
         "# ssd mobilenet version 2 \n",
         "#module_handle = \"https://tfhub.dev/google/openimages_v4/ssd/mobilenet_v2/1\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +109,7 @@
       "source": [
         "model = hub.load(module_handle)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +150,7 @@
         "# Available signatures for this particular model\n",
         "model.signatures.keys()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +174,7 @@
       "source": [
         "detector = model.signatures['default']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +235,7 @@
         "    \n",
         "    return filename"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +254,7 @@
         "# download the image and use the original height and width\n",
         "downloaded_image_path = download_and_resize_image(image_url, 3872, 2592)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +328,7 @@
         "    print(result[\"detection_class_entities\"])\n",
         "    print(result[\"detection_boxes\"])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +344,7 @@
         "# runs the object detection model and prints information about the objects found, i.e. Their probability, predicted class and bounding box repectively.\n",
         "run_detector(detector, downloaded_image_path)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
