--- a/TensorflowHub_Basics.ipynb
+++ b/TensorflowHub_Basics.ipynb
@@ -6,7 +6,7 @@
       "name": "TensorflowHub Basics",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3tUYhbRgaBHQuGEiha011",
+      "authorship_tag": "ABX9TyPlsiJzu0Y2NoVA/hkKpXSm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "nVC6FtESmPSI"
       },
       "source": [
-        "# **Object Detection using models from TensorflowHub Part 2**\n",
+        "# **Object Detection using models from TensorflowHub**\n",
         "In this notebook, we will use a model from TfHub to classify objects and predict bounding boxes. The object probabilities, predicted class names and predicted bounding boxes will be **printed out**."
       ]
     },
